# mkdocs-smart-docs

./: LICENSE  pyproject.toml  readme.md
.config/: cspell.config.yaml
docs/: sota.md
src/mkdocs_smart_docs/: __main__.py  nlp.py  plugin.py  server.py
src/mkdocs_smart_docs/assets/site/smart-docs/: index.js  style.css
